// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.js should have -1 tabindex when disabled 1`] = `

<div tabindex="-1"
     class="input-group input-group--disabled input-group--append-icon input-group--text-field input-group--select input-group--autocomplete"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <input disabled="disabled"
             class="input-group--select__autocomplete"
      >
    </div>
    <div class="menu menu--disabled"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 24px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul data-uid="26"
              class="list"
          >
            <li disabled="disabled">
              <div disabled="disabled"
                   href="javascript:;"
                   class="list__tile list__tile--link list__tile--disabled"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    No data available
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i class="material-icons icon input-group__append-icon">
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VSelect.js should not display when not autocomplete with placeholder and dirty 1`] = `

<input disabled="disabled"
       class="input-group--select__autocomplete"
       placeholder="Placeholder"
       style="display: none;"
>

`;

exports[`VSelect.js should render a disabled input with placeholder 1`] = `

<input disabled="disabled"
       class="input-group--select__autocomplete"
       placeholder="Placeholder"
>

`;
